fix: align settings to center

--- a/web/static/css/tailwind.css
+++ b/web/static/css/tailwind.css
@@ -1820,6 +1820,11 @@ code {
     justify-content: flex-end;
   }
 
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .md\:px-40 {
     padding-left: 10rem;
     padding-right: 10rem;
@@ -1852,6 +1857,11 @@ code {
   .lg\:px-40 {
     padding-left: 10rem;
     padding-right: 10rem;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .lg\:py-16 {
